--- a/ödevler/style-whatsapp.css
+++ b/ödevler/style-whatsapp.css
@@ -423,9 +423,6 @@ button, input {
 ._1_9wz {
     margin-bottom: 34px;
     background-color: rgb(224 224 224 / 11%);
-}
-
-._1_9wz {
     height: 1px;
 }
 
@@ -439,19 +436,12 @@ button, input {
 
 ._33d9M {
     margin-top: 1px;
-}
-._33d9M {
     color: #828689;
 }
-
 ._3yRMq {
     margin-left: 5px;
-}
-
-._3yRMq {
     text-align: unset;
 }
-
-.zaKsw a {
+._3yRMq a {
     color: #00af9c;
 }
